# Bike-Sharing

./: .gitignore  README.md  SIXT_DataScience_Task202402.ipynb  Submission.html  Submission.ipynb  main.py  pyproject.toml
mlruns/0/: meta.yaml
mlruns/438716735589480911/: meta.yaml
mlruns/438716735589480911/2569ab2c97624b0aaecb1a29f8ed0e1a/: meta.yaml
mlruns/653296901739475550/: meta.yaml
mlruns/653296901739475550/00db18e6eb11480e875d96e9e7f6e29e/: meta.yaml
mlruns/653296901739475550/0292ff305aaf41599b35e75d2ed99c1a/: meta.yaml
mlruns/653296901739475550/05843cac1fda4525af3ff36b870b7cc1/: meta.yaml
mlruns/653296901739475550/05ba05690d1e4f82859b5044f3371ce6/: meta.yaml
mlruns/653296901739475550/05cd8b2f4a844d659973bcb78029ce32/: meta.yaml
mlruns/653296901739475550/07ac41723fa24ca6b468123416530ca9/: meta.yaml
mlruns/653296901739475550/0830e6abd72149d49ff08824171f60d5/: meta.yaml
mlruns/653296901739475550/0933bf53178d42cf88f71b282eaa3032/: meta.yaml
mlruns/653296901739475550/095350c7066f46c4bbaa26f623bd03f6/: meta.yaml
mlruns/653296901739475550/0c7de2402b7f4d8d8cc07e8ceb6f1a83/: meta.yaml
mlruns/653296901739475550/0cd143808c244699a24322ca5e445d95/: meta.yaml
mlruns/653296901739475550/0ced8b95173342e7975aea97d4782e9a/: meta.yaml
mlruns/653296901739475550/0ee187e06f174e23827e12d1310d2030/: meta.yaml
mlruns/653296901739475550/0f87c745a6084f5dbf740c4245b8bf67/: meta.yaml
mlruns/734557037424599957/: meta.yaml
thrash/: Daily_random_forest.ipynb  SIXT_DataScience_Task202402.ipynb  final_model.ipynb  modelling.ipynb  random_forest.ipynb
(+6304 files in other folders)
