[project]
name = "data-science-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "mlflow>=3.6.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "prophet>=1.2.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "xgboost>=3.1.2",
]


[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.0",
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "ruff>=0.14.6",
]
